--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="dev.js"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <!-- <script src="dev.js"></script> -->
   <link rel="stylesheet" href="style.css" />
+  <!-- Tangle -->
+	<script type="text/javascript" src="Tangle.js"></script>
+
+	<!-- TangleKit (optional) -->
+	<link rel="stylesheet" href="TangleKit/TangleKit.css" type="text/css">
+	<script type="text/javascript" src="TangleKit/mootools.js"></script>
+	<script type="text/javascript" src="TangleKit/sprintf.js"></script>
+	<script type="text/javascript" src="TangleKit/BVTouchable.js"></script>
+	<script type="text/javascript" src="TangleKit/TangleKit.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body>
+
+<body  onload="setUpTangle();">
   <div class="container">
     <div class="row justify-content-center align-items-center" style="height: 100vh;">
       <div class="col-md-8">
@@ -25,19 +43,22 @@
           </div>
 
 
-          <!-- Original -->
-          <!-- <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="inputGroup-sizing-default">Add Image Description</span>
-            </div>
-            <input type="text" id="description" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-          </div> -->
-
           <!-- Main Image Description -->
           <div class="input-group mb-3">
             <span class="input-group-text">Main Image Description</span>
             <input type="text" id="mainDescription" class="form-control">
           </div>
+
+          <!-- Testing Interactive Text  -->
+          The size, should be  <span data-var="width" class="TKAdjustableNumber"> width</span> and <span data-var="height" class="TKAdjustableNumber"> height</span>.
+          <br/>
+          Adjust the picture to be <span data-var="darkness" class="TKAdjustableNumber"> darkness</span> and 
+          <span data-var="saturation" class="TKAdjustableNumber"> saturation</span>
+          <br/>
+          <br/>
+
+           <img id="image_graphics" src="./images/example.png">
+
 
           <!-- Dynamic Items Container -->
           <div id="itemsContainer">
@@ -78,17 +99,49 @@
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+  <script>
+
+var tangle = new Tangle(document, {
+    initialize: function () {
+        this.width = 300;   // Initialize default width
+        this.height = 200;  // Initialize default height
+        this.darkness = 50; // Initialize default darkness (0 to 100)
+        this.saturation = 50;// Initialize default saturation (0 to 100)
+    },
+    update: function () {
+        var img = document.getElementById("image_graphics");
+        img.style.width = this.width + "px";
+        img.style.height = this.height + "px";
+        img.style.filter = `brightness(${100 - this.darkness}%) saturate(${this.saturation}%)`;
+    }
+});
+
+  var tangle = new Tangle(document, {
+      initialize: function () { this.width = 1; },
+      update:     function () { this.width = this.width * 2; }
+  });
+    var tangle = new Tangle(document, {
+      initialize: function () { this.height = 1; },
+      update:     function () { this.height = this.height * 2; }
+  });
+
+  var tangle = new Tangle(document, {
+      initialize: function () { this.darkness = 1; },
+      update:     function () { this.darkness = this.darkness * 2; }
+  });
+
+  var tangle = new Tangle(document, {
+      initialize: function () { this.saturation = 1; },
+      update:     function () { this.saturation = this.saturation * 2; }
+  });
+
+</script>
 
   <script>
 
 document.addEventListener("DOMContentLoaded", function() {
 
-      const itemsContainer = document.getElementById("itemsContainer");
-      let itemCount = 0;
 
       // Function to add a new item input group
       function addItem() {
