--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <!-- <script src="dev.js"></script> -->
+  <script src="dev.js"></script>
   <link rel="stylesheet" href="style.css" />
   <!-- Tangle -->
 	<script type="text/javascript" src="Tangle.js"></script>
