tonejs component add

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 	<script type="text/javascript" src="TangleKit/BVTouchable.js"></script>
 	<script type="text/javascript" src="TangleKit/TangleKit.js"></script>
 
+  <!-- Tonejs -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.4.3/webcomponents-bundle.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet"/>
+  <script src="http://unpkg.com/tone"></script>
+	<script src="./js/tone-ui.js"></script>
+	<script src="./js/components.js"></script>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
