--- a/audio2.html
+++ b/audio2.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="icon" type="image/png" sizes="174x174" href="./favicon.png">
 
-  <script src="http://unpkg.com/tone"></script>
+  <script src="https://unpkg.com/tone"></script>
 	<script src="./js/tone-ui.js"></script>
 	<script src="./js/components.js"></script>
 
