--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </div>
   </div>
 
-<div id="content">
-  <tone-slider label="Panner" id="panner" units="hz" value="4" step="0.5" min="1" max="15"></tone-slider>
+<!-- <div id="content"> -->
+  <!-- <tone-slider label="Panner" id="panner" units="hz" value="4" step="0.5" min="1" max="15"></tone-slider>
   <tone-play-toggle id="osc0"></tone-play-toggle>
 
 	<script type="text/javascript">
@@ -96,7 +96,7 @@
 		document.querySelector("#osc0").addEventListener("stop", () => pannerOsc.stop());
 		document.querySelector("#panner").addEventListener("input", (e) => panner.frequency.value = parseFloat(e.target.value));
 	</script>
-
+ -->
 
 </body>
 
